--- a/HaE.config.yml
+++ b/HaE.config.yml
@@ -8,7 +8,7 @@ rules:
     scope: any
   - color: red
     engine: nfa
-    loaded: true
+    loaded: false
     name: jwt
     regex: (ey[A-Za-z0-9_-]{10,}\.[A-Za-z0-9._-]{10,}|ey[A-Za-z0-9_\/+-]{10,}\.[A-Za-z0-9._\/+-]{10,})
     scope: any
@@ -44,7 +44,7 @@ rules:
     scope: response
   - color: pink
     engine: nfa
-    loaded: true
+    loaded: false
     name: ssrf2
     regex: (^(POST|GET|PUT) \/.*=https?:)
     scope: request header
