--- a/HaE.config.yml
+++ b/HaE.config.yml
@@ -14,7 +14,7 @@ rules:
     scope: any
   - color: orange
     engine: nfa
-    loaded: true
+    loaded: false
     name: mobile
     regex: '[^0-9A-Za-z](1(3([0-35-9]\d|4[1-8])|4[14-9]\d|5([\d]\d|7[1-79])|66\d|7[2-35-8]\d|8\d{2}|9[89]\d)\d{7})[^0-9A-Za-z]'
     scope: response
